- tłumaczenie dla modułu Kontakt
- poprawki do wyjątków OPT, dodane tłumaczenie oraz poprawiony wygląd
- możliwość tworzenia podstron o takiej samej nazwie jak katalog z systemem
- klasa Crypt może być teraz używana w adresach URL
- aktywacja przycisku 'Wróć' w mechaniźmie obsługi błędów
- optymalizacja pobierania danych użytkownika

        OD TERAZ DATA PRZY WERSJI OZNACZA DZIEŃ PREMIERY A NIE ROZPOCZĘCIA PRAC NAD SYSTEMEM

			eXtreme-Fusion 5.0.2 2013.06.01

- poprawka zabezpieczeń i usuniecie błędu przy włączonym register_globals - usuniecie problemu z niezadeklarowana zmienna na jednym z darmowych serwerów
- usuniecie odstępu nad jednym z paneli
- cache dla różnych szablonów o tej samej nazwie plików tymczasowych
- usuniecie błędów dotyczących MySQL w konfiguracji strict mode
- nowy wygląd paneli nawigacja, ostatnio online
- nowy wygląd nagłówków paneli bocznych oraz nawigacji poziomej
- podświetlanie w menu poziomym strony głównej, gdy nie jesteśmy na podstronie
- wdrożenie obsługi IPv6 w statystykach unikalnych odwiedzin - wyeliminowanie problemu (jak dobrze pamiętam) z logowaniem
- poprawki plików językowych, głownie polskich i angielskich
- usunięciu błędu z niezadeklarowanym indeksem hash w sesji użytkownika
- modyfikacja pliku index.php umożliwiająca rozpoczęcie prac nad forum oraz budowę modułów we wzorcu MVP/MVC lub pochodnym
- poprawka do zarządzania panelami - usuniecie niepotrzebnej funkcji parsującej dane
- Usunięcie BOM z wszystkich plików

			eXtreme-Fusion 5.0.1 2013.05.28

- uzupełnienie czeskich plików językowych

eXtreme-Fusion V STABLE 2013.03.4

- zmiana licencji na aGPL v3
- dodanie licznika unikalnych wizyt
- poprawki prywatnych wiadomości
- wprowadzenie ustawienia wykrywania języka w przeglądarce
- pageNav dla komentarzy wraz z nową metodą dla .tpl

			eXtreme-Fusion V RC1 2012.12.12

- usunięto katalog "info": pliki przeniesiono do folderu "dokumentacja"
- utworzono katalog "common" dla plików JS