@@ -3,5 +3,5 @@
 $array = include __DIR__.DS.'admin'.DS.'cookies.php';
 
 return array_merge($array, array(
-	
+
 ));
