@@ -18,9 +18,9 @@ if ($message)
 {
 
 	$_tpl = new General(dirname(__DIR__).DS.'templates'.DS);
-	
+
 	$_tpl->assign('message', $message);
-	
+
 	// Pobranie z cache zapytania sprawdzającego czy moduł jest zainstalowany
 	$policy = $_system->cache('cookies_policy', NULL, 'cookies', 2592000);
 
@@ -30,11 +30,11 @@ if ($message)
 		$policy = $_pdo->getField('SELECT `policy` FROM [cookies]');
 		$_system->cache('cookies_policy', $policy, 'cookies');
 	}
-	
+
 	if ($policy)
 	{
 		$_tpl->assign('policy', $policy);
 	}
-	
+
 	$_tpl->template('message.tpl');
 }
