@@ -11,6 +11,8 @@
 - klasa Crypt może być teraz używana w adresach URL
 - aktywacja przycisku 'Wróć' w mechaniźmie obsługi błędów
 - optymalizacja pobierania danych użytkownika
+- nowy moduł - Pliki cookies
+- funkcja url() od teraz dostępna w Panelu Admina
 
         OD TERAZ DATA PRZY WERSJI OZNACZA DZIEŃ PREMIERY A NIE ROZPOCZĘCIA PRAC NAD SYSTEMEM
 
